Correccion de endpoints

--- a/config/i18n/i18n.en.json
+++ b/config/i18n/i18n.en.json
@@ -169,7 +169,8 @@
         "mySims": "Go to MY SIMS",
         "addSim": "Add another SIM",
         "retry": "Try again",
-        "verify": "Check SIM"
+        "verify": "Check SIM",
+        "active": "Activate"
       },
       "fields": {
         "name": {
