--- a/config/i18n/i18n.es.json
+++ b/config/i18n/i18n.es.json
@@ -169,7 +169,8 @@
         "mySims": "Ir a MIS SIMS",
         "addSim": "Agregar otra SIM",
         "retry": "Intentar nuevamente",
-        "verify": "Verificar SIM"
+        "verify": "Verificar SIM",
+        "active": "Activar"
       },
       "fields": {
         "name": {
