--- a/config/i18n/i18n.fr.json
+++ b/config/i18n/i18n.fr.json
@@ -180,7 +180,8 @@
           "placeholder": "Carte ID SIM",
           "electronicSim": "E-SIM DÉTECTÉE",
           "physicalSim": "CARTE SIM PHYSIQUE DÉTECTÉE",
-          "invalidSim": "ID SIM à 6 chiffres ou 19 chiffres incorrect"
+          "invalidSim": "ID SIM à 6 chiffres ou 19 chiffres incorrect",
+          "sim-timSim": "SIM TIM Détecté"
         }
       },
       "helpMessages": {
